[package]
name = "aizu_online_judge"
version = "0.1.0"
edition = "2021"

[dependencies]
ac-library-rs = "=0.1.1"
itertools = "=0.9.0"
itertools-num = "=0.1.3"
proconio = { version = "=0.3.6", features = ["derive"] }
library = { path="../../library" }

[[bin]]
name = "warshall-floyd"
path = "src/warshall_floyd.rs"

[[bin]]
name = "divisors"
path = "src/divisors.rs"

[[bin]]
name = "RMQ"
path = "src/rmq.rs"

[[bin]]
name = "RUQ"
path = "src/ruq.rs"

[[bin]]
name = "RAQ"
path = "src/raq.rs"

[[bin]]
name = "skip-list"
path = "src/skiplist.rs"
